--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="section">
+    <header>
 
-        <div class="container">
-        <nav>
+        <div class="container header-container">
+        <nav class="main-nav">
             <a lang="en" class="logo" href="./index.html"><span class="logo-conteiner">Web</span>Studio</a>
             <ul class="nav">
                 <li>
@@ -51,7 +51,7 @@
                 Портфоліо
             </h1>
 
-        <ul class="button-list lists">
+        <ul class="button-list">
             <li>
                 <button class="button-list-item" type="button">Усі</button>
             </li>
@@ -69,87 +69,105 @@
             </li>
         </ul>
         
-        <ul class="reclam lists">
+        <ul class="reclam">
             <li>
                 <img src="./images/technokriack.jpg" alt="Список із трьох людей" width="370" height="294">
+                <div class="reclam-tools">
                 <h2 class="reclam-list">
                     Технокряк
                 </h2>
                 <p class="reclam-item">
                     Веб-сайт
                 </p>
+                </div>
             </li>
             <li>
                 <img src="./images/basketball.jpg" alt="Два хлопці грають у баскетбол" width="370" height="294">
+                <div class="reclam-tools">
                 <h2 class="reclam-list">
                     Постер New Orlean vs Golden Star
                 </h2>
                 <p class="reclam-item">
                     Дизайн
                 </p>
+                </div>
             </li>
             <li>
                 <img src="./images/restaurant.jpg" alt="логотип ресторану" width="370" height="294">
+                <div class="reclam-tools">
                 <h2 class="reclam-list">
                     Ресторан Seafood
                 </h2>
                 <p class="reclam-item">
                     Додаток
                 </p>
+                </div>
             </li>
             <li>
                 <img src="./images/headphones.jpg" alt="фото навушників" width="370" height="294">
+                <div class="reclam-tools">
                 <h2 class="reclam-list">
                     Проєкт Prime
                 </h2>
                 <p class="reclam-item">
                     Маркетинг
                 </p>
+                </div>
             </li>
             <li>
                 <img src="./images/boxes.jpg" alt="фото двох невеликих коробочьок" width="370" height="294">
+                <div class="reclam-tools">
                 <h2 class="reclam-list">
                     Проєкт Boxes
                 </h2>
                 <p class="reclam-item">
                     Додаток
                 </p>
+                </div>
             </li>
             <li>
                 <img src="./images/monitor.jpg" alt="зображення монітору" width="370" height="294">
+                <div class="reclam-tools">
                 <h2 lang="en" class="reclam-list">
                     Inspiration has no Borders
                 </h2>
                 <p class="reclam-item">
                     Веб-сайт
                 </p>
+                </div>
             </li>
             <li>
                 <img src="./images/book.jpg" alt="на фото зображена книга під назвою обмежений випуск" width="370" height="294">
+                <div class="reclam-tools">
                 <h2 class="reclam-list">
                     Видання Limited Edition
                 </h2>
                 <p class="reclam-item">
                     Дизайн
                 </p>
+                </div>
             </li>
             <li>
                 <img src="./images/trinket.jpg" alt="на малюнку зображений брелок" width="370" height="294">
+                <div class="reclam-tools">
                 <h2 class="reclam-list">
                     Проєкт LAB
                 </h2>
                 <p class="reclam-item">
                     Маркетинг
                 </p>
+                </div>
             </li>
             <li>
                 <img src="./images/notbook.jpg" alt="на малюнку зображений ноутбук" width="370" height="294">
+                <div class="reclam-tools">
                 <h2 lang="en" class="reclam-list">
                     Growing Business
                 </h2>
                 <p class="reclam-item">
                     Додаток
                 </p>
+                </div>
             </li>
         </ul>
         </div>
@@ -158,12 +176,12 @@
 
     </main>
 
-    <footer class="section">
+    <footer>
 
         <div class="container">
-        <a lang="en" class="logotipes" href="./index.html"><span class="logo-conteiner">Web</span>Studio</a>
         <address class="address">
-            <ul class="address-list lists">
+            <a lang="en" class="logotipes" href="./index.html"><span class="logo-conteiner">Web</span>Studio</a>
+            <ul class="address-list">
                 <li>
                     <a class="address-name mails" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">
                         м. Київ, пр-т Лесі
