Добавил сетку элементов

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
 
         <section class="section">
 
-            <div class="container">
+        <div class="container">
             <h1 class="visually-hidden">
                 Портфоліо
             </h1>
@@ -68,8 +68,10 @@
                 <button class="button-list-item" type="button">Маркетинг</button>
             </li>
         </ul>
-        
+
+        <div class="flex-container">
         <ul class="reclam">
+            <div class="flex-element">
             <li>
                 <img src="./images/technokriack.jpg" alt="Список із трьох людей" width="370" height="294">
                 <div class="reclam-tools">
@@ -81,6 +83,9 @@
                 </p>
                 </div>
             </li>
+            </div>
+
+            <div class="flex-element">
             <li>
                 <img src="./images/basketball.jpg" alt="Два хлопці грають у баскетбол" width="370" height="294">
                 <div class="reclam-tools">
@@ -92,6 +97,9 @@
                 </p>
                 </div>
             </li>
+            </div>
+
+            <div class="flex-element">
             <li>
                 <img src="./images/restaurant.jpg" alt="логотип ресторану" width="370" height="294">
                 <div class="reclam-tools">
@@ -103,6 +111,9 @@
                 </p>
                 </div>
             </li>
+            </div>
+
+            <div class="flex-element">
             <li>
                 <img src="./images/headphones.jpg" alt="фото навушників" width="370" height="294">
                 <div class="reclam-tools">
@@ -114,6 +125,9 @@
                 </p>
                 </div>
             </li>
+            </div>
+
+            <div class="flex-element">
             <li>
                 <img src="./images/boxes.jpg" alt="фото двох невеликих коробочьок" width="370" height="294">
                 <div class="reclam-tools">
@@ -125,6 +139,9 @@
                 </p>
                 </div>
             </li>
+            </div>
+
+            <div class="flex-element">
             <li>
                 <img src="./images/monitor.jpg" alt="зображення монітору" width="370" height="294">
                 <div class="reclam-tools">
@@ -136,6 +153,9 @@
                 </p>
                 </div>
             </li>
+            </div>
+
+            <div class="flex-element">
             <li>
                 <img src="./images/book.jpg" alt="на фото зображена книга під назвою обмежений випуск" width="370" height="294">
                 <div class="reclam-tools">
@@ -147,6 +167,9 @@
                 </p>
                 </div>
             </li>
+            </div>
+
+            <div class="flex-element">
             <li>
                 <img src="./images/trinket.jpg" alt="на малюнку зображений брелок" width="370" height="294">
                 <div class="reclam-tools">
@@ -158,6 +181,9 @@
                 </p>
                 </div>
             </li>
+            </div>
+
+            <div class="flex-element">
             <li>
                 <img src="./images/notbook.jpg" alt="на малюнку зображений ноутбук" width="370" height="294">
                 <div class="reclam-tools">
@@ -169,7 +195,9 @@
                 </p>
                 </div>
             </li>
+            </div>
         </ul>
+        </div>
         </div>
 
         </section>
